--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -5,57 +5,72 @@
 :root {
   --color-background: #000;
   --space: 50px;
-  --edit-menu-height: 100px;
-  --timeline-height: 200px;
 }
 
 body {
   width: 100vw;
   height: 100vh;
-  
   background: var(--color-background);
+}
+
+main {
+  width: 100vw;
+  height: 100vh;
+  
 
   padding: var(--space);
+
+  display: grid;
+  grid-template-rows: 1fr var(--space) 100px var(--space) 100px;
+
+  grid-template-areas: "preview"
+    "."
+    "timeline"
+    "."
+    "edit-menu";
+
+  justify-items: stretch;
 }
 
 .preview {
-  height: calc(100vh - var(--space) * 4 - var(--timeline-height) - var(--edit-menu-height));
-  /* DO NOT USE FLEX OR GRID, UPDATING CANVAS HAS AN ISSUE WITH IT, SINCE CANVAS DEPENDS ON PARENT AND PARENT DEPENDS ON CANVAS */
-}
-
-.preview canvas {
-  height: 100%;
-  width: 100%;
+  border: 5px solid rgb(255, 76, 76);
+  grid-area: preview;
 }
 
 /* STYLES RELATED TO TIMELINE */
 
 .timeline {
   position: relative;
+  grid-area: timeline;
+  max-width: 100%;
+  min-width: 0;
+  border: 5px solid rgb(45, 183, 222);
+  overflow: auto;
+}
 
-  height: var(--timeline-height);
-  width: 100%;
-
-  margin: var(--space) 0;
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  // for some reason gl doesn't scale when we use bottom: 0, right: 0.
 }
 
 .add-btn {
   --size: 50px;
 
-  right: 50px;
-  top: 80px;
-
   position: absolute;
-
-  padding: 9px;
-  border-radius: 50%;
-  background-color: rgb(255, 76, 76);
+  right: 50px;
+  top: 20px;
 
   width: var(--size);
   height: var(--size);
 
-  
+  padding: 9px;
   color: white;
+  background: rgb(255, 76, 76);
+  border-radius: 50%;
   cursor: pointer;
 }
 
@@ -63,17 +78,9 @@ body {
   opacity: 0;
 }
 
-
-
-.timeline canvas {
-  height: 100%;
-  width: 100%;
-}
-
 .edit-menu {
   grid-area: edit-menu;
-  background: cyan;
-
+  border: 5px solid lime;
   height: 100px;
 }
 
