--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -45,6 +45,11 @@ main {
   max-width: 100%;
   min-width: 0;
   border: 5px solid rgb(45, 183, 222);
+}
+
+.timeline-slider {
+  width: 100%;
+  height: 100%;
   overflow: auto;
 }
 
