--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -33,7 +33,7 @@ main {
 }
 
 .preview {
-  border: 5px solid rgb(255, 76, 76);
+  outline: 5px solid rgb(255, 76, 76);
   grid-area: preview;
 }
 
@@ -44,13 +44,22 @@ main {
   grid-area: timeline;
   max-width: 100%;
   min-width: 0;
-  border: 5px solid rgb(45, 183, 222);
+  outline: 5px solid rgb(45, 183, 222);
 }
 
 .timeline-slider {
   width: 100%;
   height: 100%;
   overflow: auto;
+}
+
+.timeline-pointer {
+  position: absolute;
+  width: 4px;
+  height: calc(100% + 40px);
+  top: -20px;
+  left: calc(50% - 2px);
+  background: tomato;
 }
 
 canvas {
@@ -85,7 +94,7 @@ canvas {
 
 .edit-menu {
   grid-area: edit-menu;
-  border: 5px solid lime;
+  outline: 5px solid lime;
   height: 100px;
 }
 
