update frame viewer a lot

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -17,9 +17,6 @@ main {
   width: 100vw;
   height: 100vh;
   
-
-  padding: var(--space);
-
   display: grid;
   grid-template-rows: 1fr var(--space) 100px var(--space) 100px;
 
@@ -68,6 +65,7 @@ canvas {
   left: 0;
   height: 100vh;
   width: 100vw;
+  pointer-events: none;
   // for some reason gl doesn't scale when we use bottom: 0, right: 0.
 }
 
