--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -110,3 +110,15 @@ canvas {
 body {
   overflow: hidden;
 }
+
+#logger {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  font-size: 20px;
+  color: red;
+  pointer-events: none;
+}
