--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -29,14 +29,18 @@
   }
 }
 
-body {
-  background: var(--color-background);
+html, body {
+  height: 100%;
+}
+
+ body {
   touch-action: none;
+  background: var(--color-background);
 }
 
 main {
-  width: 100vw;
-  height: calc(var(--vh, 1vh) * 100);
+  width: 100%;
+  height:100%;
   
   display: grid;
   grid-template-rows: 1fr var(--space) calc(2 * var(--space)) var(--space) calc(2 * var(--space)) var(--space);
@@ -84,8 +88,8 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
-  height: calc(var(--vh, 1vh) * 100);
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   pointer-events: none;
   // for some reason gl doesn't scale when we use bottom: 0, right: 0.
 }
