Drawing path freely (#6)
* draw path freely

* looks like we i quite a lot!

* thickness is working!

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -22,20 +22,28 @@
 
 :root {
   --color-background: #000;
-  --space: 50px;
+  --space: 20px;
+
+  @media (min-width: 600px) {
+    --space: 50px;
+  }
 }
 
-body {
-  background: var(--color-background);
+html, body {
+  height: 100%;
+}
+
+ body {
   touch-action: none;
+  background: var(--color-background);
 }
 
 main {
-  width: 100vw;
-  height: calc(var(--vh, 1vh) * 100);
+  width: 100%;
+  height:100%;
   
   display: grid;
-  grid-template-rows: 1fr var(--space) 100px var(--space) 100px var(--space);
+  grid-template-rows: 1fr var(--space) calc(2 * var(--space)) var(--space) calc(2 * var(--space)) var(--space);
 
   grid-template-areas: "preview"
     "."
@@ -70,8 +78,8 @@ main {
 .timeline-pointer {
   position: absolute;
   width: 4px;
-  height: calc(100% + 40px);
-  top: -20px;
+  height: calc(100% + calc(0.8 * var(--space)));
+  top: calc(0.2 * var(--space));
   left: calc(50% - 2px);
   background: tomato;
 }
@@ -80,8 +88,8 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
-  height: calc(var(--vh, 1vh) * 100);
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   pointer-events: none;
   // for some reason gl doesn't scale when we use bottom: 0, right: 0.
 }
