--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,1 @@
-@import './reset.scss', './custom.scss', './toolbar.scss';
+@import './reset.scss', './custom.scss', './toolbar.scss', './interactive.scss';
